Finalizo, por tercera vez, el resumen del primer libro. Actualizo el resumen del segundo libro

--- a/lp01.md
+++ b/lp01.md
@@ -3,3 +3,8 @@
 El niño huerfano **Larry** vive con sus tío, que lo tratoan bastante mal mal (le hacen usar *Internet Explorer*). 
 
 Tiene unas *Google Glasses* redondas y una cicatriz de un *USB* en la frente. 
+
+Un dia, aparece **Neo**, el de *Matrix*, y le dice que é también puede ser un hacker. 
+Asi que lo saca de **Matrix** y le lleva a una escuela de Hacking
+
+Alli conoce a sus amigos **Ron** y **Version**, y viven sus primeras aventuras picando código
